docs(content): 更新 Java JDK 文档，新增 Java 22-24 特性详解